# routes/contextual.routes.js
@@ -5,21 +5,21 @@ const contextualPlayController = require('../controllers/contextualplay.controll
 
 // DEVICE ENDPOINTS
 router.route("/data")
-    .get(contextualController.getData)
-    .post(contextualController.postData);
+    .get(contextualController.getData);
+    // .post(contextualController.postData);
 
 router.route('/play/data/:contextual_id')
     .post(contextualPlayController.postPlayData);
-router.post("add_video/:retail_id", contextualController.addVideo);
+
+// router.post("/add_video/:retail_id", contextualController.addVideo);
 
 router.post("/upload_video/verify", contextualController.handleVerifyUpload);
 
-router.post("/upload_video/merge", contextualController.handleVerifyUpload);
+router.post("/upload_video/merge", contextualController.handleMerge);
 
-router.post("//upload_video/verify", contextualController.handleVerifyUpload);
+router.post("/upload_video/delete", contextualController.deleteFiles);
 
-router.post("/upload_video", contextualController.handleFormData);
-
+router.post("/upload_video/data", contextualController.handleFormData);
 
 // router.post("/update_video/:retail_id",);
 // router.post("/data/:retail_id",);
